[gd_scene load_steps=24 format=2]

[ext_resource path="res://Sprites/Player/idle/idle001.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Player/run/run010-removebg-preview.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Player/idle/jump-001.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Player/run/run005-removebg-preview.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Player/run/run002-removebg-preview.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Player/run/run003-removebg-preview.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Player/idle/jump-002.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Player/idle/idle002.png" type="Texture" id=8]
[ext_resource path="res://Scenes/Gun.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/ScreenShaker.gd" type="Script" id=10]
[ext_resource path="res://ControllerPlayer.gd" type="Script" id=11]
[ext_resource path="res://Sprites/Player/idle/jump-003.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Player/run/run006-removebg-preview.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Player/run/run001-removebg-preview.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Player/wallSlide/GraySpritesheet-removebg-preview (1).png" type="Texture" id=15]
[ext_resource path="res://Sprites/Player/run/run004-removebg-preview.png" type="Texture" id=16]
[ext_resource path="res://Sprites/Player/run/run008-removebg-preview.png" type="Texture" id=17]
[ext_resource path="res://Sprites/Player/run/run007-removebg-preview.png" type="Texture" id=18]
[ext_resource path="res://Sprites/Player/wallSlide/GraySpritesheet-removebg-preview - Copy (1).png" type="Texture" id=19]
[ext_resource path="res://Sprites/Player/run/run009-removebg-preview.png" type="Texture" id=20]
[ext_resource path="res://ControllerBlaster.gd" type="Script" id=21]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 8 ) ],
"loop": true,
"name": "idle",
"speed": 1.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 7 ), ExtResource( 12 ) ],
"loop": false,
"name": "jump",
"speed": 3.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 16 ), ExtResource( 4 ), ExtResource( 13 ), ExtResource( 18 ), ExtResource( 17 ), ExtResource( 20 ), ExtResource( 2 ) ],
"loop": true,
"name": "run",
"speed": 13.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 19 ) ],
"loop": false,
"name": "wallSlide",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5, 10 )

[node name="Player" type="KinematicBody2D"]
collision_mask = 2
script = ExtResource( 11 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
light_mask = 2
position = Vector2( -1.54972e-06, 4.10301e-07 )
scale = Vector2( 0.651515, 0.651515 )
frames = SubResource( 1 )
animation = "jump"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2, 2 )
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
smoothing_enabled = true

[node name="ScreenShaker" type="Node" parent="Camera2D"]
script = ExtResource( 10 )

[node name="FrontMiddleRay" type="RayCast2D" parent="."]
position = Vector2( 2, 0 )
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 7 )

[node name="Gun" parent="." instance=ExtResource( 9 )]
show_behind_parent = true
position = Vector2( 0, -3 )
offset = Vector2( 18, 0 )
script = ExtResource( 21 )

[connection signal="mouse_entered" from="." to="." method="_on_Player_mouse_entered"]
